# GreenText

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: McpPanel.tsx  TerminalTab.tsx  Topbar.tsx  VaultPanel.tsx
src/components/editor/: EditorArea.tsx
src/components/layout/: Inspector.tsx  Sidebar.tsx  StatusBar.tsx  TabStrip.tsx  Topbar.tsx  index.ts
src/components/panels/: CommandPalette.tsx  HelpPanel.tsx  RegexTester.tsx  SftpBrowser.tsx  index.ts
src/data/: languages.ts  templates.ts
src/editor/: monacoSetup.ts
src/hooks/: index.ts  useCommandRunner.ts  useCommands.ts  useFiles.ts  useTauriMenu.ts
src/store/: useEditorStore.ts
src/types/: index.ts
src/utils/: format.ts  helpers.ts
